[FIX] web: avoid subpixel on small bs components
The small variations of our bootstrap components in bootstrap share the
same line-height than their regular sized ones.

We use a 13px font-size on our bootstrap small variants of components
which result in a total of 19.5 pixel once mulitplied by it's
line-height (13*1.5).

This causes various visual glitches due to subpixel rendering issues.

task-6089966

--- a/addons/web/static/src/scss/secondary_variables.scss
+++ b/addons/web/static/src/scss/secondary_variables.scss
@@ -29,6 +29,7 @@ $o-sheet-cancel-bpadding: $o-horizontal-padding !default;
 // Computation of the total height of a single line,
 // useful to visually center elements eg. in a list view.
 $o-line-size: $o-line-height-base * $o-font-size-base !default;
+$o-line-size-sm-px: $o-line-height-base * $o-font-size-base-small-px !default;
 
 // Form
 
